src/test/examples/custom/valid/class/classFunctionsCanUseDynamicVariables.wacc
# Class functions can use dynamic variables
# Expected output:
# 3

begin
  class H is
    public int v
    private int J(int i, bool x) is
       if x
   	then
         return i
        else
         return 0
       fi
    end
    public int g() is
       var y = 3;
       int k = call J(5, false) ;
       v = k+y ;
       return v
    end
  end
  int f() is
    return 0
  end
  H v = new H(2) ;
  var k = call v.g();
  println k
end
