src/test/examples/custom/invalid/syntaxErr/class/classFunctionsCannotHaveDynamicVariablesForParams.wacc
# Class functions cannot have dynamic variables as their params

begin
  class H is
    public int v
    private int J(var i, bool x) is
       if x
   	then
         return i
        else
         return 0
       fi
    end
    public int g() is
       int y = 3;
       int k = call J(y, false) ;
       v = k+y ;
       return v
    end
  end
  int f() is
    return 0
  end
  H v = new H(2) ;
  var k = call v.g();
  println k
end
